# lumenstream-ce

./: .dockerignore  .env.fullstack.example  .env.fullstack.localbackend.example  .gitignore  .lumenstream-repository-role.toml  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.fullstack  README.generated.md  README.md  api-compat-matrix.md  claude.md  config.example.yaml  docker-compose.fullstack.localbackend.yml  docker-compose.fullstack.yml  embyapi.json  justfile  prek.toml
.github/: pull_request_template.md
.github/workflows/: ci-ghcr.yml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
crates/ls-agent/: Cargo.toml
crates/ls-agent/src/: lib.rs  llm.rs  model.rs  moviepilot.rs  provider.rs  workflow.rs
crates/ls-api/: Cargo.toml
crates/ls-api/src/: lib.rs
crates/ls-api/src/api/: error_map.rs  helpers_auth.rs  helpers_edition_masks.rs  helpers_misc.rs  helpers_request_ip.rs  middleware.rs  prelude.rs  router.rs  router_commercial.rs  routes_admin_libraries_tasks.rs  routes_admin_ops.rs  routes_admin_sessions_system.rs  routes_admin_storage_lumenbackend.rs  routes_admin_users_profile.rs  routes_admin_users_stream.rs  routes_auth_invite.rs  routes_billing_admin_config.rs  routes_billing_admin_ops.rs  routes_billing_user.rs  routes_compat_playlists_collections.rs  routes_items_browse.rs  routes_items_library_compat.rs  routes_items_shows.rs  routes_playlists_notifications.rs  routes_requests_agent.rs  routes_sessions_report.rs  routes_stream_media.rs  routes_system_self.rs  routes_users_jellyfin.rs  tests.rs
crates/ls-app/: Cargo.toml
crates/ls-app/src/: main.rs
crates/ls-config/: Cargo.toml
crates/ls-config/src/: lib.rs
crates/ls-domain/: Cargo.toml
crates/ls-domain/src/: jellyfin.rs  lib.rs  model.rs
crates/ls-infra/: Cargo.toml
crates/ls-infra/src/: auth.rs  billing.rs  db.rs  lib.rs  scanner.rs  search.rs
crates/ls-infra/src/infra/: app_agent_requests.rs  app_auth_tokens.rs  app_core.rs  app_invite.rs  app_jobs_maintenance_tail.rs  app_jobs_queue.rs  app_jobs_scan_tmdb_core.rs  app_jobs_tmdb_fill.rs  app_libraries_storage_domains.rs  app_lumenbackend_cache_admin.rs  app_media_filters_items.rs  app_media_playback_stream.rs  app_media_root_search.rs  app_playlists_redirect.rs  app_scraper.rs  app_sessions_audit.rs  app_user_notifications.rs  app_users_policy_traffic.rs  app_users_profile.rs  db_rows_system.rs  db_rows_user_playlist.rs  helpers_edition.rs  mappers_user_media.rs  prelude.rs  tests.rs  utils_tasks_lumenbackend.rs  utils_tmdb_nfo.rs
crates/ls-infra/src/scheduler/: billing.rs  cleanup.rs  job_retry.rs  library_scan.rs  mod.rs  queued_dispatch.rs
crates/ls-logging/: Cargo.toml
crates/ls-logging/src/: lib.rs
crates/ls-scraper/: Cargo.toml
crates/ls-scraper/src/: bangumi.rs  lib.rs  model.rs  nfo.rs  provider.rs  tmdb.rs  tvdb.rs
docker/: Dockerfile.web  fullstack-entrypoint.sh  nginx.conf  nginx.stream-gateway.localbackend.conf  web-entrypoint.sh  write-web-runtime-config.sh
docs/: editions.md  emby-compat-diff-2026-02-25.json  generated-repository.md  repository-split.md  upstream-downstream.md
migrations/: 0001_squashed_baseline.sql  0002_jobs_progress.sql  0003_jobs_cancel_requested.sql  0004_subtitle_sync_incremental.sql  0005_library_type.sql  0006_drop_raw_sidecars.sql  0007_user_stream_usage_media_daily.sql  0008_playback_domain_binding_traffic_multiplier.sql  0009_account_permission_groups.sql  0010_item_id_aliases.sql  0011_playlist_type_and_collections.sql  0012_lumenbackend_runtime_schema_and_manual_nodes.sql  0013_library_multi_paths.sql  0014_media_items_multiversion.sql  0015_media_items_sort_name_column.sql  0016_watch_states_favorite_index.sql  0017_retire_cache_prewarm_task.sql  0018_scan_library_default_cron_3min.sql  0019_admin_api_keys_delete_only.sql  0020_agent_requests.sql  0021_scraper_platform.sql  0022_agent_provider_columns.sql  0023_agent_loop_runtime.sql
scripts/: cut_split_repositories.sh  export_ce_upstream.sh  init_commercial_downstream.sh  repo_split_common.sh  sync_from_ce_upstream.sh
web/: .env.example  .gitignore  .prettierignore  README.md  astro.config.mjs  eslint.config.js  package.json
web/public/: runtime-config.js
web/src/: env.d.ts
web/src/components/brand/: BrandLockup.test.tsx  BrandLockup.tsx
web/src/components/domain/: AddToPlaylistModal.test.tsx  AddToPlaylistModal.tsx  AdminItemModal.tsx  DataState.tsx  MediaCard.tsx  Modal.test.tsx  Modal.tsx  PlayerPickerModal.tsx  PosterItemCard.test.tsx  PosterItemCard.tsx  ScraperPolicyModal.tsx
web/src/components/edition/: FeatureUnavailable.tsx
web/src/components/effects/: AnimatedSection.tsx  CountUpNumber.tsx  GlowCard.tsx  ParticleField.tsx  SpeedGauge.tsx  SpeedTestGauge.test.ts  SpeedTestGauge.tsx  SpotlightCursor.tsx
web/src/components/navigation/: AppSidebar.tsx  FloatingDock.test.tsx  FloatingDock.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  select.tsx  slider.tsx  (+7 more)
web/src/layouts/: AdminLayout.astro  AppLayout.astro  BaseLayout.astro
web/src/lib/: utils.ts
web/src/pages/: index.astro  login.astro  register.astro
web/src/styles/: global.css  global.test.ts
(+164 files in other folders)
