[package]
name = "ls-agent"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }

ls-config = { path = "../ls-config" }
