[package]
name = "ls-app"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

ls-api = { path = "../ls-api" }
ls-config = { path = "../ls-config" }
ls-infra = { path = "../ls-infra" }
ls-logging = { path = "../ls-logging" }
