[package]
name = "ls-infra"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
md5 = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
argon2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
walkdir = { workspace = true }
pinyin = { workspace = true }
unicode-normalization = { workspace = true }
meilisearch-sdk = { workspace = true }
image = { workspace = true }
tempfile = "3.15"

ls-config = { path = "../ls-config" }
ls-agent = { path = "../ls-agent" }
ls-scraper = { path = "../ls-scraper" }
ls-domain = { path = "../ls-domain" }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
