[package]
name = "ls-logging"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
ls-config = { path = "../ls-config" }
parking_lot = "0.12"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
