[package]
name = "ls-scraper"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.15"
